--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     compile files('libs/Android_Map3D_SDK_V5.3.0_20170815.jar')
+    compile files('libs/AMap_Location_V3.6.0_20170918.jar')
 }
